# bevy_llm_agent

./: Cargo.toml
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/counter/src/tools/: add_to_counter.rs  get_counter.rs  mod.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/werewolf/: Cargo.toml
examples/werewolf/src/: auto_scroll.rs  main.rs
examples/werewolf/src/prompts/: day_die.md  day_die_hunter.md  day_die_idiot.md  day_last_words.md  day_speech.md  day_vote.md  night_hunter.md  night_seer.md  night_werewolf.md  night_werewolf_r1.md  night_witch.md  system.md
src/: agent.rs  app_ext.rs  chat_completion.rs  lib.rs  prelude.rs  tool.rs
src/agent/: agent.rs  agent_builder.rs  builder.rs  core.rs  dialog.rs  message.rs  mod.rs  status.rs  thinking.rs
src/messages/: agent_message.rs  mod.rs  user_message.rs
src/plugin/: core.rs  mod.rs
src/plugin/systems/: mod.rs  read_raw_tool_invocation.rs  read_user_message.rs  write_agent_message.rs
src/tool/: app_ext.rs  mod.rs  tool.rs  tool_adapter.rs  tool_invocation.rs  tool_trait.rs
