[package]
name = "bevy-llm-agent"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "examples/*"]

[workspace.dependencies]
rand = "0.10.1"
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.149"

[workspace.dependencies.bevy]
version = "=0.19.0-rc.3"
default-features = false

[dependencies]
rig-core = "0.36.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
bevy = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
